<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lexical_entry_top_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/expander_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:clickable="true"
        android:contentDescription="Definitions expander icon."
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
        android:src="@drawable/expander_ic_minimized" />

    <TextView
        android:id="@+id/dict_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/expander_icon"
        android:background="@color/black"
        android:clickable="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/dictionary_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expander_icon"
        android:background="@color/black"
        android:clickable="true"
        android:text="@string/article_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:visibility="gone" />

    <net.bancer.sparkdict.views.DefinitionsView
        android:id="@+id/definitions_body"
        style="?android:attr/textViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/article_title"
        android:background="@color/black"
        android:cursorVisible="false"
        android:editable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine|textPhonetic"
        android:linksClickable="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/definitions_body"
        android:textColor="@color/white"
        android:visibility="gone" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white" />

</RelativeLayout>